# SBVH

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  vcpkg-configuration.json  vcpkg.json
resources/scenes/sibenik/: sibenik.conf  sibenik.obj.bz2  sibenik.view
source/: application.cpp  application.hpp  main.cpp  types.hpp  utils.hpp  window.hpp
source/raytracing_backend/: aabb.cpp  aabb.hpp  bvh.cpp  bvh.hpp  raytracer.cpp  raytracer.hpp  scene.cpp  scene.hpp  triangle.hpp
source/rendering_backend/: camera.cpp  camera.hpp  renderer.cpp  renderer.hpp  renderer_context.hpp
source/rendering_backend/shaders/: aabb.glsl  scene.glsl
source/rendering_backend/shared/: draw_aabb_shared.inl
source/rendering_backend/tasks/: clear_present_task.hpp  draw_aabbs_task.hpp  draw_imgui_task.hpp  draw_scene_task.hpp  fill_buffers_task.hpp  fill_index_buffer_task.hpp
